--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,23 @@
+name: Run API Tests
+on: [push]
+jobs:
+    test:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v2
+
+            - name: Set up Node.js
+              uses: actions/setup-node@v2
+              with:
+                node-version: '16'
+
+            - name: Install dependencies
+              run: npm install
+
+            - name: Create a reports directory
+              run: mkdir -p reports
+
+            - name: Run tests
+              run: npx mocha --reporter mochawesome --reporter-options reportDir=reports, reportFilename=report --exit
 
