--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
             - name: Run tests
               #run: npx mocha --reporter mochawesome --reporter-options reportDir=reports, reportFilename=report --exit
               run: |
-                node ./node_modules/mocha/bin/mocha.js \
+                node ./node_modules/mocha/bin/mocha.js tests\ 
                 --reporter mochawesome \
                 --reporter-options reportDir=reports,reportFilename=report \
                 --exit
